--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
             <i class="fas fa-gem me-3"></i>Company name
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+            Fashion Capital of vignan stay tuned for updated syles
           </p>
         </div>
         <!-- Grid column -->
