--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
             Products
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="#men" class="text-reset">Men</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="#women" class="text-reset">Women</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
+            <a href="#ele" class="text-reset">Electronics</a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Laravel</a>
+            <a href="#jew" class="text-reset">Jewellery</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -168,13 +168,13 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-home me-3"></i>Vignan University,Vadlamudi,India</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
             info@example.com
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+          <p><i class="fas fa-phone me-3"></i> + 91 6303919766</p>
+          <p><i class="fas fa-print me-3"></i> + 91 8096156359</p>
         </div>
         <!-- Grid column -->
       </div>
@@ -185,8 +185,8 @@
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    © 2024 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">VignanE-commerce.com</a>
   </div>
   <!-- Copyright -->
 </footer>
