--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>Vignan E-commerce
           </h6>
           <p>
-            Fashion Capital of vignan stay tuned for updated syles
+            Fashion Capital of vignan stay tuned for updated styles
           </p>
         </div>
         <!-- Grid column -->
